--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: itwangwh Blog
-SEOTitle: 文豪的博客 | itwangwh Blog
+SEOTitle: 豪可的博客 | itwangwh Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: itwangwh@163.com
 description: "这里是 @itwangwh 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
-keyword: "文豪, itwangwh王文豪, itwangwh, 鬼栈, 文豪的博客, itwangwh Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
+keyword: "豪可, itwangwh豪可, itwangwh, 豪可, 豪可的博客, itwangwh Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
 url: "https://itwangwh.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -59,7 +59,7 @@ kramdown:
       start_line: 1
 
 # Disqus settings
-disqus_username: hux
+disqus_username: itwangwh
 
 # Netease settings
 netease_comment: false
@@ -70,7 +70,7 @@ netease_comment: false
 
 # Google Analytics
 ga_track_id: "UA-49627206-1" # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_domain: itwangwh.com
 
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
@@ -91,12 +91,5 @@ page-mathjax: false
 # Friends
 friends:
   [
-    { title: "乱序（Midare）", href: "http://mida.re/" },
-    { title: "Ebn Zhang", href: "https://ebnbin.dev/" },
-    { title: "Kun Qian", href: "http://kunq.me" },
-    { title: "Sherry Woo", href: "https://sherrywoo.me/" },
-    { title: "SmdCn", href: "http://blog.smdcn.net" },
-    { title: "JiyinYiyong", href: "http://tiye.me/" },
-    { title: "DHong Say", href: "http://dhong.co" },
-    { title: "尹峰以为", href: "http://ingf.github.io/" },
+
   ]
