--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ weibo_username: itwangwh
 zhihu_username: itwangwh
 github_username: itwangwh
 twitter_username: itwangwh
-#facebook_username:  huxpro
+#facebook_username:  itwangwh
 #linkedin_username:  firstname-lastname-idxxxx
 
 # Build settings
@@ -75,7 +75,7 @@ ga_domain: itwangwh.com
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: "要做一个有 swag 的程序员 <br> React Team @ Meta"
-sidebar-avatar: https://github.com/Huxpro.png # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://i.postimg.cc/dt7sj5gY/Wechat-IMG19.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
